Fix header spacing

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -101,22 +101,14 @@ img {
 }
 
 #navbar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 40px;
+  height: 20px;
 /*  background-color: #333344;*/
-  display: block;
-/*  text-align: right*/;
-  padding: 10px;
 }
 
-#navbar-right {
-  display: inline;
-  float: right;
+#navbar a {
+/*  float: right;*/
+  padding: 5px;
 }
-
 
 #body-container {
   margin-top: 70px;
